revert to running gateway outside cluster and update endpoint/class naming conventions to `saved-search` from `savesearches`,
